--- a/src/components/background/background.module.css
+++ b/src/components/background/background.module.css
@@ -8,7 +8,7 @@
 /* Aurora field */
 .aurora {
   position: absolute;
-  inset: -10% -10% -20% -10%;
+  inset: -10% 0 -20% 0;
   background: radial-gradient(
       80% 80% at 30% 20%,
       rgba(133, 64, 255, 0.25),
