--- a/src/index.css
+++ b/src/index.css
@@ -121,9 +121,10 @@ h1 {
 }
 
 body {
+  
   position: relative;
-  margin: 10px;
-
+  margin: 0;
+  padding: 0;
   background-color: var(--bg-primary);
   font-family: "Instrument Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
     sans-serif;
